--- a/QuizSocketApp/Base.lproj/Main.storyboard
+++ b/QuizSocketApp/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,13 +13,105 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="QuizSocketApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="he3-Ka-THI">
+                                <rect key="frame" x="0.0" y="40" width="375" height="627"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZuQ-Rr-40M">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="313.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6JQ-Kw-oaf">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="21"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7E-NM-QqR">
+                                                        <rect key="frame" x="0.0" y="0.0" width="183.5" height="21"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RW1-CE-8l1">
+                                                        <rect key="frame" x="191.5" y="0.0" width="183.5" height="21"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="21" id="tGK-XT-hqy"/>
+                                                </constraints>
+                                            </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xnY-bS-g4j">
+                                                <rect key="frame" x="0.0" y="21" width="375" height="292.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="6JQ-Kw-oaf" firstAttribute="top" secondItem="ZuQ-Rr-40M" secondAttribute="top" id="6hN-Ou-bCJ"/>
+                                            <constraint firstItem="xnY-bS-g4j" firstAttribute="top" secondItem="6JQ-Kw-oaf" secondAttribute="bottom" id="DVF-0C-8Wq"/>
+                                            <constraint firstAttribute="bottom" secondItem="xnY-bS-g4j" secondAttribute="bottom" id="PxP-ch-rD4"/>
+                                            <constraint firstAttribute="trailing" secondItem="xnY-bS-g4j" secondAttribute="trailing" id="YvY-31-Rwn"/>
+                                            <constraint firstAttribute="trailing" secondItem="6JQ-Kw-oaf" secondAttribute="trailing" id="cde-Qk-XcL"/>
+                                            <constraint firstItem="6JQ-Kw-oaf" firstAttribute="leading" secondItem="ZuQ-Rr-40M" secondAttribute="leading" id="ckx-gG-D4l"/>
+                                            <constraint firstItem="xnY-bS-g4j" firstAttribute="leading" secondItem="ZuQ-Rr-40M" secondAttribute="leading" id="har-7p-nTT"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jcf-9t-4Au">
+                                        <rect key="frame" x="0.0" y="313.5" width="375" height="313.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="HL1-or-Rk2">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="313.5"/>
+                                                <subviews>
+                                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TYG-sz-iKt">
+                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="78.5"/>
+                                                        <state key="normal" title="Button 1"/>
+                                                    </button>
+                                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kHn-zN-nUr">
+                                                        <rect key="frame" x="0.0" y="78.5" width="375" height="78.5"/>
+                                                        <state key="normal" title="Button 2"/>
+                                                    </button>
+                                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GGw-gy-mWO">
+                                                        <rect key="frame" x="0.0" y="157" width="375" height="78"/>
+                                                        <state key="normal" title="Button 3"/>
+                                                    </button>
+                                                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eDD-je-Fyl">
+                                                        <rect key="frame" x="0.0" y="235" width="375" height="78.5"/>
+                                                        <state key="normal" title="Button 4"/>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="HL1-or-Rk2" secondAttribute="bottom" id="9hb-Mc-CN9"/>
+                                            <constraint firstItem="HL1-or-Rk2" firstAttribute="leading" secondItem="jcf-9t-4Au" secondAttribute="leading" id="krd-pe-E2q"/>
+                                            <constraint firstAttribute="trailing" secondItem="HL1-or-Rk2" secondAttribute="trailing" id="kyM-pA-wzp"/>
+                                            <constraint firstItem="HL1-or-Rk2" firstAttribute="top" secondItem="jcf-9t-4Au" secondAttribute="top" id="rwv-dF-wCQ"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="he3-Ka-THI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="1iV-qJ-uYF"/>
+                            <constraint firstItem="he3-Ka-THI" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="AHN-ra-6Qm"/>
+                            <constraint firstItem="he3-Ka-THI" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="40" id="CSE-c0-0cW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="he3-Ka-THI" secondAttribute="bottom" id="WmB-Fk-xMZ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="lblQuestion" destination="xnY-bS-g4j" id="n8s-D7-Uhj"/>
+                        <outlet property="lblQuestionNumber" destination="y7E-NM-QqR" id="yXC-eN-WYt"/>
+                        <outlet property="lblWildcard" destination="RW1-CE-8l1" id="xPF-fE-sVV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
