--- a/QuizSocketApp/SupportingFiles/Base.lproj/Main.storyboard
+++ b/QuizSocketApp/SupportingFiles/Base.lproj/Main.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,26 +15,26 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="QuestionViewController" customModule="QuizSocketApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="he3-Ka-THI">
-                                <rect key="frame" x="0.0" y="40" width="600" height="560"/>
+                                <rect key="frame" x="0.0" y="40" width="375" height="627"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZuQ-Rr-40M">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="280"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="313.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6JQ-Kw-oaf">
-                                                <rect key="frame" x="0.0" y="0.0" width="600" height="21"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="21"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7E-NM-QqR">
-                                                        <rect key="frame" x="0.0" y="0.0" width="296" height="21"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="183.5" height="21"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RW1-CE-8l1">
-                                                        <rect key="frame" x="304" y="0.0" width="296" height="21"/>
+                                                        <rect key="frame" x="191.5" y="0.0" width="183.5" height="21"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -41,7 +45,7 @@
                                                 </constraints>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xnY-bS-g4j">
-                                                <rect key="frame" x="0.0" y="21" width="600" height="259"/>
+                                                <rect key="frame" x="0.0" y="21" width="375" height="292.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -59,29 +63,38 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jcf-9t-4Au">
-                                        <rect key="frame" x="0.0" y="280" width="600" height="280"/>
+                                        <rect key="frame" x="0.0" y="313.5" width="375" height="313.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="HL1-or-Rk2">
-                                                <rect key="frame" x="0.0" y="0.0" width="600" height="280"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="313.5"/>
                                                 <subviews>
                                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TYG-sz-iKt">
-                                                        <rect key="frame" x="0.0" y="0.0" width="600" height="70"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="78.5"/>
                                                         <state key="normal" title="Button 1"/>
                                                         <connections>
-                                                            <action selector="deneme:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WY8-aj-m2N"/>
+                                                            <action selector="AnswerAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="t2N-mW-tTL"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kHn-zN-nUr">
-                                                        <rect key="frame" x="0.0" y="70" width="600" height="70"/>
+                                                        <rect key="frame" x="0.0" y="78.5" width="375" height="78.5"/>
                                                         <state key="normal" title="Button 2"/>
+                                                        <connections>
+                                                            <action selector="AnswerAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LPc-mr-ln3"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GGw-gy-mWO">
-                                                        <rect key="frame" x="0.0" y="140" width="600" height="70"/>
+                                                        <rect key="frame" x="0.0" y="157" width="375" height="78"/>
                                                         <state key="normal" title="Button 3"/>
+                                                        <connections>
+                                                            <action selector="AnswerAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="elM-EU-eBp"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eDD-je-Fyl">
-                                                        <rect key="frame" x="0.0" y="210" width="600" height="70"/>
+                                                        <rect key="frame" x="0.0" y="235" width="375" height="78.5"/>
                                                         <state key="normal" title="Button 4"/>
+                                                        <connections>
+                                                            <action selector="AnswerAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n1X-uA-Nz3"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
